Fixed z-index bug

--- a/src/sass/page-stats-analyzer.scss
+++ b/src/sass/page-stats-analyzer.scss
@@ -332,7 +332,7 @@ $table-outer-borders: $border-width-sections-medium solid $color-heading-bg;
 	}
 }
 .filter-notice {
-	z-index: list($layers, scroll-to-top);
+	z-index: 1;
 	grid-column: span 4;
 	padding: 0 $lhse*1.5;
 	margin: math.div(-$lhse, 3) (-$lhse*1.5) 0;
